--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -130,6 +130,7 @@
 \newcommand{\R}{\texttt{R}\xspace}
 \newcommand{\Rev}{\texttt{Rev}\xspace}
 \newcommand{\RevBayes}{\texttt{RevBayes}\xspace}
+\newcommand{\RevGadgets}{\texttt{RevGadgets}\xspace}
 \newcommand{\TESS}{\texttt{TESS}\xspace}
 \newcommand{\Tracer}{\texttt{Tracer}\xspace}
 \newcommand{\TreePar}{\texttt{TreePar}\xspace}
