--- a/tutorial_TeX/RB_DiversificationRate_Episodic_Tutorial/RB_DiversificationRate_Episodic_Tutorial_content.tex
+++ b/tutorial_TeX/RB_DiversificationRate_Episodic_Tutorial/RB_DiversificationRate_Episodic_Tutorial_content.tex
@@ -11,14 +11,12 @@ Finally, you will estimate speciation and extinction rates through-time using Ma
 \subsection{Requirements}
 We assume that you have read and hopefully completed the following tutorials:
 \begin{itemize}
-\item RB\_Getting\_Started
-\item RB\_Basics\_Tutorial
-\item RB\_BayesFactor\_Tutorial
-\item RB\_BasicDiversificationRate\_Tutorial
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.pdf}{Getting started}
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{Rev basics}
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_DiversificationRate_Tutorial/RB_DiversificationRate_Tutorial.pdf}{Basic Diversification Rate Estimation}
 \end{itemize}
 Note that the RB\_Basics\_Tutorial introduces the basic syntax of \Rev but does not cover any phylogenetic models.
 You may skip the RB\_Basics\_Tutorial if you have some familiarity with \R.
-The RB\_BayesFactor\_Tutorial introduced Bayesian model selection by means of Bayes factors, which can be skipped by readers familiar with Bayesian model selection.
 We tried to keep this tutorial very basic and introduce all the language concepts and theory on the way.
 You may only need the RB\_Basics\_Tutorial for a more in-depth discussion of concepts in \Rev.
 
@@ -76,10 +74,11 @@ taxa <- T.taxa()
 \end{lstlisting}
 \end{snugshade*}}
 
-Additionally, we can initialize an iterator variable for our vector of moves:
+Additionally, we can initialize an iterator variable for our vector of moves and monitors:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 mvi = 0
+mni = 0
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -97,11 +96,12 @@ Using this variable we can easily change our script to break-up time into many o
 
 \subsubsection{Priors on rates}
 We start by specifying prior distributions on the rates.
-Each interval specific speciation and extinction rate will be drawn from a normal distribution.
-Thus, we a parameter for the standard deviation of those normal distributions.
+Each interval-specific speciation and extinction rate will be drawn from a normal distribution.
+Thus, we need a parameter for the standard deviation of those normal distributions.
 We use an exponential hyperprior with rate 1.0 to estimate the standard deviation, but assume that all speciation rates and all extinction rates share the same standard deviation.
 The motivation for an exponential hyperprior is that it has the highest probability density at 0 which would make he variance between rates 0 too and thus represent a constant rate process.
 The data will tell us if there should be much variation in rates through time.
+(You may want to experiment with this hyperprior if you are interested.)
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 speciation_sd ~ dnExponential(1.0)
@@ -118,12 +118,12 @@ moves[++mvi] = mvScale(extinction_sd,weight=5.0)
 
 The second prior parameter that we need to specify is mean of the speciation and extinction rate at present.
 This is because we are actually modeling rate-changes backwards in time and there is no previous rate for the rate at the present.
-Thus we use a uniform distribution between -5 and 5 because of lack of prior knowledge.
+Thus we use a uniform distribution between -10 and 10 because of lack of prior knowledge.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 # draw the mean from a uniform distribution
-speciation_prior_mean ~ dnUniform(-5.0,5.0)
-extinction_prior_mean ~ dnUniform(-5.0,5.0)
+speciation_prior_mean ~ dnUniform(-10.0,10.0)
+extinction_prior_mean ~ dnUniform(-10.0,10.0)
 \end{lstlisting}
 \end{snugshade*}}
 This time we will apply a simple sliding window move because both parameters are location parameters instead of scale or variance parameters.
@@ -183,15 +183,31 @@ for (i in 1:NUM_INTERVALS) {
 }
 \end{lstlisting}
 \end{snugshade*}}
-Finally, we apply moves that slide all values in the vectors, \IE all speciation or extinction rates, by the same amount. 
-This again considerably improves the efficiency of our MCMC analysis.
+Finally, we apply moves that slide all values in the rate vectors, \IE all speciation or extinction rates, and the prior mean parameters by the same amount. 
+We will use an \cl{mvUpDownSlide} move.
+This move needs to be created in multiple steps because we have to add each variable that is perturbed independently using the member function \cl{.addVariable}.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-moves[++mvi] = mvVectorSlide(log_speciation, weight=10)
-moves[++mvi] = mvVectorSlide(log_extinction, weight=10)
+spec_slide_move = mvUpDownSlide(weight=10)
+spec_slide_move.addVariable( log_speciation, TRUE )
+spec_slide_move.addVariable( speciation_prior_mean, TRUE )
+moves[++mvi] = spec_slide_move
+
+ext_slide_move = mvUpDownSlide(weight=10)
+ext_slide_move.addVariable( log_extinction, TRUE )
+ext_slide_move.addVariable( extinction_prior_mean, TRUE )
+moves[++mvi] = ext_slide_move
 \end{lstlisting}
 \end{snugshade*}}
 
+Additionally, we apply a \cl{mvShrinkExpand} move which changes the spread of several variables around their mean.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+moves[++mvi] = mvShrinkExpand( log_speciation, sd=speciation_sd, weight=10 )
+moves[++mvi] = mvShrinkExpand( log_extinction, sd=extinction_sd, weight=10 )
+\end{lstlisting}
+\end{snugshade*}}
+This again considerably improves the efficiency of our MCMC analysis.
 
 \subsubsection{Setting up the time inverals}
 In \RevBayes you actually have the possibility unequal time intervals or even different intervals for the speciation and extinction rate.
@@ -199,18 +215,18 @@ This is achieved by providing a vector of times when each interval ends.
 Here we simply break-up the most recent 80\% of time since the root in equal intervals.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-interval_times = T.rootAge() * (1:NUM_INTERVALS) / (NUM_INTERVALS) * 0.8
+interval_times <- T.rootAge() * (1:NUM_INTERVALS) / (NUM_INTERVALS) * 0.8
 \end{lstlisting}
 \end{snugshade*}}
 
 
 \subsubsection{Incomplete Taxon Sampling}
 
-We know that we have sampled 367 out of 450 living primate species. 
-To account for this we can set the sampling parameter as a constant node with a value of 369/450
+We know that we have sampled 367 out of 377 living primate species. 
+To account for this we can set the sampling parameter as a constant node with a value of 367/377
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-rho <- T.ntips()/450
+rho <- T.ntips()/377
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -260,23 +276,25 @@ For our MCMC analysis, we need to set up a vector of \textit{monitors} to record
 First, we will initialize the model monitor using the \cl{mnModel} function. This creates a new monitor variable that will output the states for all model parameters when passed into a MCMC function. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[1] = mnModel(filename="output/primates_BSBD.log",printgen=10, separator = TAB)
+monitors[++mni] = mnModel(filename="output/primates_EBD.log",printgen=10, separator = TAB)
 \end{lstlisting}
 \end{snugshade*}}
 
-Additionally, we create two separate file monitors, one for each vector of speciation and extinction rates.
+Additionally, we create four separate file monitors, one for each vector of speciation and extinction rates and for each speciation and extinction rate epoch (\IE the times when the interval ends).
 We want to have the speciation and extinction rates stored separately so that we can plot them nicely afterwards.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[2] = mnFile(filename="output/primates_EBD_speciation.log",printgen=10, separator = TAB, speciation)
-monitors[3] = mnFile(filename="output/primates_EBD_extinction.log",printgen=10, separator = TAB, extinction)
+monitors[++mni] = mnFile(filename="output/primates_EBD_speciation_rates.log",printgen=10, separator = TAB, speciation)
+monitors[++mni] = mnFile(filename="output/primates_EBD_speciation_times.log",printgen=10, separator = TAB, interval_times)
+monitors[++mni] = mnFile(filename="output/primates_EBD_extinction_rates.log",printgen=10, separator = TAB, extinction)
+monitors[++mni] = mnFile(filename="output/primates_EBD_extinction_times.log",printgen=10, separator = TAB, interval_times)
 \end{lstlisting}
 \end{snugshade*}}
 
 Finally, create a screen monitor that will report the states of specified variables to the screen with \cl{mnScreen}:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-monitors[4] = mnScreen(printgen=1000, speciation)
+monitors[++mni] = mnScreen(printgen=1000, speciation_prior_mean, extinction_prior_mean, speciation_sd, extinction_sd)
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -305,30 +323,57 @@ mymcmc.run(generations=50000)
 \end{snugshade*}}
 
 When the analysis is complete, you will have the monitored files in your output directory.
-You can then visualize the rates through time using \R.
-We have provided a very simple example script for you.
+You can then visualize the rates through time using \R using our package \RevGadgets.
+If you don't have the R-package \RevGadgets installed, or if you have trouble with the package, then please read the separate tutorial about the package.
+
 Just start \R in the main directory for this analysis and then type the following commands:
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-source("RevBayes_scripts/Plot_EBD_RevBayes.R")
-plot.EBD("output/primates_EBD","Episodic_Rates")
+library(RevGadgets)
+
+tree <- read.tree("data/primates_Springer.tre")
+files <- c("output/primates_EBD_speciation_times.log", "output/primates_EBD_speciation_rates.log", "output/primates_EBD_extinction_times.log", "output/primates_EBD_extinction_rates.log")
+
+rev_out <- rev.process.output(files,tree,burnin=0.25,numIntervals=100)
+
+pdf("EBD.pdf")
+par(mfrow=c(2,2))
+rev.plot.output(rev_out)
+dev.off()
 \end{lstlisting}
 \end{snugshade*}}
 
-\impmark{The \Rev file for performing this analysis: \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRateEpisodic_Tutorial/RevBayes_scripts/mcmc_EBD.Rev}{\cl{mcmc\_EBD.Rev}}.}
-\impmark{An \R file for plotting the output: \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRateEpisodic_Tutorial/RevBayes_scripts/Plot_EBD_RevBayes.R}{\cl{Plot\_EBD\_RevBayes.R}}.}
+\impmark{The \Rev file for performing this analysis: \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_DiversificationRate_Episodic_Tutorial/scripts/mcmc_EBD.Rev}{\cl{mcmc\_EBD.Rev}}.}
 
+\begin{figure}[h!]
+\centering
+\fbox{\includegraphics[width=\textwidth]{\ResourcePath figures/EBD_10_Result.pdf}}
+\caption{\small Resulting diversification rate estimations when using 10 intervals. You should obtain similar results when you use 10 intervals. The estimated rates might change when you use a different resolution, \IE a different number of intervals.}
+\label{fig:EBD_Results}
+\end{figure}
 
-\subsection{Exercise}
+\subsection{Exercise 1}
 
 \begin{itemize}
 \item Run an MCMC simulation to estimate the posterior distribution of the speciation rate and extinction rate.
 \item Visualize the rate through time using \R.
 \item Do you see evidence for rate decreases or increases? What is the general trend?
 \item Run the analysis using a different number of intervals, \EG 5 or 50. How do the rates change?
-\item Modify the model by specifying a prior on the log-diversification and log-turnover rate and then estimate the diversification rates through time. Do you see any differences in the estimates? 
 \end{itemize}
 
+
+\subsection{Exercise 2}
+
+\begin{itemize}
+\item In our results we see that the extinction rate is fairly constant. Modify the model by using a constant-rate for the extinction rate parameter but still let the speciation rate vary through time. 
+\begin{itemize}
+\item Remove all previous occurrences of the extinction rates (\IE priors, parameters and moves).
+\item Specify a lognormal prior distribution on the constant extinction rate \\(\cl{extinction ~ dnLognormal(-5,sd=2*0.587405)})
+\item Add a move for the new extinction rate parameter \\\cl{moves[++mvi] = mvScale(extinction,weight=5.0)}.
+\item Remove the argument \cl{muTimes=interval\_times} from the birth-death process.
+\end{itemize}
+\item How does this influence your estimated rates?
+\end{itemize}
 
 
 
