--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -22,6 +22,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{float}
+\usepackage{fancybox}
 
 %\usepackage[backend=bibtex,hyperref=true,citestyle=authoryear,bibstyle=authortitle,firstinits=true,terseinits=true,doi=false,url=false,maxbibnames=10,maxcitenames=2]{biblatex}
 %\addbibresource{../bib_tex/master_refs.bib}
