--- a/tutorial_TeX/RB_DiversificationRate_Episodic_Tutorial/RB_DiversificationRate_Episodic_Tutorial_content.tex
+++ b/tutorial_TeX/RB_DiversificationRate_Episodic_Tutorial/RB_DiversificationRate_Episodic_Tutorial_content.tex
@@ -4,21 +4,21 @@
 
 This tutorial describes how to specify an episodic branching-process models in \RevBayes;
 a birth-death process where diversification rates vary episodically through time model by piecewise constant rates \citep{Stadler2011,Hoehna2015a}.
-The probabilistic graphical model is given for each component of this tutorial.
-Finally, you will estimate speciation and extinction rates through-time using Markov chain Monte Carlo (MCMC).
+The probabilistic graphical model is given once at the beginning of this tutorial.
+Your goal is to estimate speciation and extinction rates through-time using Markov chain Monte Carlo (MCMC).
 
 
 \subsection{Requirements}
 We assume that you have read and hopefully completed the following tutorials:
 \begin{itemize}
 \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.pdf}{Getting started}
-\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{Rev basics}
+\item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics}
 \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_DiversificationRate_Tutorial/RB_DiversificationRate_Tutorial.pdf}{Basic Diversification Rate Estimation}
 \end{itemize}
-Note that the RB\_Basics\_Tutorial introduces the basic syntax of \Rev but does not cover any phylogenetic models.
-You may skip the RB\_Basics\_Tutorial if you have some familiarity with \R.
+Note that the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} introduces the basic syntax of \Rev but does not cover any phylogenetic models.
+You may skip the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} if you have some familiarity with \R.
 We tried to keep this tutorial very basic and introduce all the language concepts and theory on the way.
-You may only need the RB\_Basics\_Tutorial for a more in-depth discussion of concepts in \Rev.
+You may only need the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics tutorial} for a more in-depth discussion of concepts in \Rev.
 
 
 %%%%%%%%
@@ -30,11 +30,11 @@ We provide the data file(s) which we will use in this tutorial.
 You may want to use your own data instead.
 In the \cl{data} folder, you will find the following files
 \begin{itemize}
-\item \cl{primates\_springer.tre}: Dated primates phylogeny including 369 out of 450 species from \cite{Springer2012}.
+\item \cl{primates\_springer.tre}: Dated primates phylogeny including 369 out of 377 species from \cite{Springer2012}.
 \end{itemize}
 
 
-\impmark{Open the tree \cl{data/primates\_springer.tre} in FigTree.}
+\impmark{Open the tree \cl{data/primates\_springer.tre} in \FigTree.}
 
 
 \bigskip
@@ -42,17 +42,19 @@ In the \cl{data} folder, you will find the following files
 
 The basic idea behind the model is that speciation and extinction rates are piecewise constant but can be different for different time intervals.
 Thus, we will divide time into equal time interval with the only exception that the first 20\% of the time do not have any rate changes.
-Our only reason to do so is because there are two few lineages in the reconstructed tree at that time to obtain reliable parameter estimates.
-An overview of the underlying theory of the specific model and implementation is given in \citep{Hoehna2015a}.
+Our only reason to do so is because there are too few lineages in the reconstructed tree at that time to obtain reliable parameter estimates.
+An overview of the underlying theory of the specific model and implementation is given in \cite{Hoehna2015a}.
 \begin{figure}[h!]
 \centering
 \fbox{\includegraphics[width=\textwidth]{\ResourcePath figures/EBD_scenarios.pdf}}
-\caption{\small Four scenarios of birth-death models.}
+\caption{\small Two scenarios of birth-death models. On the left we show constant diversification. On the right we show an example of an episodic birth-death process where rates are constant in each time interval (epoch). The top panel of this figure shows example realization under the given rates.}
 \label{fig:EBD}
 \end{figure}
+Figure~\ref{fig:EBD} shows an example of a constant rate birth-death process and an episodic birth-death process.
 
 We assume that the log-transformed rates are drawn from a normal distribution.
 Furthermore, we will assume that rates are autocorrelated, that is, rates in the next time interval will be centered around the rates in the current time interval.
+Thus, we model (log-transformed) diversification rates by a Brownian motion.
 The assumption of autocorrelated rates does not only makes sense biologically but also improves our ability to estimate parameters.
 \begin{figure}[h!]
 \centering
@@ -60,12 +62,15 @@ The assumption of autocorrelated rates does not only makes sense biologically bu
 \caption{\small A graphical model with the outline of the \Rev code. On the left we see the graphical model describing the correlated (Brownian motion) model for rate-variation through time. On the right we show the correspond \Rev commands to instantiate this model in computer memory. This figure gives a complete overview of the model that we use here in this analysis.}
 \label{fig:EBD_GM}
 \end{figure}
-
+We show a graphical model of the episodic birth-death process with autocorrelated rates in Figure~\ref{fig:EBD_GM}.
+This graphical model shows you which variables are included in the model, and the dependency between the variables.
+Thus, it makes the structure and assumption of the model clear and visible instead of a black-box\citep{Hoehna2014b}.
+For example, you see how the speciation and extinction rates in each time interval depend on the rates of the previous rates, and that we use a hyperprior for the standard deviation of rates between time intervals.
 
 
 \subsection{Read the tree}
 
-Begin by reading in the observed tree. 
+Begin by reading in the ``observed'' tree. 
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -73,14 +78,14 @@ T <- readTrees("data/primates_springer.tre")[1]
 \end{lstlisting}
 \end{snugshade*}}
 
-From this tree, we can get some helpful variables:
+From this tree, we get some helpful variables, such as the taxon information which we need to instantiate the birth-death process.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 taxa <- T.taxa()
 \end{lstlisting}
 \end{snugshade*}}
 
-Additionally, we can initialize an iterator variable for our vector of moves and monitors:
+Additionally, we initialize an iterator variable for our vector of moves and monitors.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 mvi = 0
@@ -94,7 +99,7 @@ Finally, we create a helper variable that specifies the number of intervals.
 NUM_INTERVALS = 10
 \end{lstlisting}
 \end{snugshade*}}
-Using this variable we can easily change our script to break-up time into many or few intervals.
+Using this variable we can easily change our script to break-up time into many (\EG~\cl{NUM\_INTERVALS = 100}) or few (\EG~\cl{NUM\_INTERVALS = 4}) intervals.
 
 
 
@@ -105,7 +110,7 @@ We start by specifying prior distributions on the rates.
 Each interval-specific speciation and extinction rate will be drawn from a normal distribution.
 Thus, we need a parameter for the standard deviation of those normal distributions.
 We use an exponential hyperprior with rate 1.0 to estimate the standard deviation, but assume that all speciation rates and all extinction rates share the same standard deviation.
-The motivation for an exponential hyperprior is that it has the highest probability density at 0 which would make he variance between rates 0 too and thus represent a constant rate process.
+The motivation for an exponential hyperprior is that it has the highest probability density at 0 which would make the variance of rates between consecutive time intervals 0 and thus represent a constant rate process.
 The data will tell us if there should be much variation in rates through time.
 (You may want to experiment with this hyperprior if you are interested.)
 {\tt \begin{snugshade*}
@@ -129,25 +134,30 @@ As we mentioned before, we will apply normal distributions as priors for each lo
 We begin with the rate at the present which is our initial rate parameter.
 The rates at the present will be specified slightly differently because they are not correlated to any previous rates.
 This is because we are actually modeling rate-changes backwards in time and there is no previous rate for the rate at the present.
-Thus we use a uniform distribution between -10 and 10 because of lack of prior knowledge.
+Modeling rates backwards in time makes it easier for us if we had some prior information about some event affected diversification sometime before the present, \EG 25 million years ago.
+
+We use a uniform distribution between -10 and 10 because of our lack of prior knowledge on the diversification rate.
+This actually means that we allow speciation and extinction rates between $e^{-10}$ and $e^10$ we should clearly cover the true values.
+(Note that for diversification rate estimates $e^{-10}$ is virtually 0 since the rate is so slow).
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-# draw the initial rate from a uniform distribution
 log_speciation[1] ~ dnUniform(-10.0,10.0)
 log_speciation[1] ~ dnUniform(-10.0,10.0)
 \end{lstlisting}
 \end{snugshade*}}
-Note that we store the variables in vectors.
+Notice that we store the diversification rate variables in vectors.
+Storing the rate parameters in vectors will be useful and important later when we pass the rates into the birth-death process.
+
 We apply simple sliding window moves for the rates.
 Normally we would use scaling moves but in this case we work on the log-transformed parameters and thus sliding moves perform better.
-If you are keen you can test the differences.
+(If you are keen you can test the differences.)
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 moves[++mvi] = mvSlide(log_speciation[1], weight=2)
 moves[++mvi] = mvSlide(log_extinction[1], weight=2)
 \end{lstlisting}
 \end{snugshade*}}
-Now we transform the parameters.
+Now we transform the diversification rate parameters into actual rates.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 speciation[1] := exp( log_speciation[1] )
@@ -155,9 +165,10 @@ extinction[1] := exp( log_extinction[1] )
 \end{lstlisting}
 \end{snugshade*}}
 
-Then we repeat the specification for the speciation and extinction rates for each time interval (\IE epoch).
+Next, we specify the speciation and extinction rates for each time interval (\IE epoch).
 This can be done efficiently using a \cl{for}-loop.
 We will use a specific index variable so that we can easier refer to the rate at the previous interval.
+Remember that we want to model the rates as a Brownian motion, which we achieve by specify a normal distribution as the prior distribution on the rates centered around the previous rate (\IE the mean is equal to the previous rate).
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 for (i in 1:NUM_INTERVALS) {
@@ -191,10 +202,10 @@ moves[++mvi] = mvShrinkExpand( log_speciation, sd=speciation_sd, weight=10 )
 moves[++mvi] = mvShrinkExpand( log_extinction, sd=extinction_sd, weight=10 )
 \end{lstlisting}
 \end{snugshade*}}
-This again considerably improves the efficiency of our MCMC analysis.
+Both moves considerably improve the efficiency of our MCMC analysis.
 
-\subsubsection{Setting up the time inverals}
-In \RevBayes you actually have the possibility unequal time intervals or even different intervals for the speciation and extinction rate.
+\subsubsection{Setting up the time intervals}
+In \RevBayes you actually have the possibility to specify unequal time intervals or even different intervals for the speciation and extinction rate.
 This is achieved by providing a vector of times when each interval ends.
 Here we simply break-up the most recent 80\% of time since the root in equal intervals.
 {\tt \begin{snugshade*}
@@ -202,7 +213,8 @@ Here we simply break-up the most recent 80\% of time since the root in equal int
 interval_times <- T.rootAge() * (1:NUM_INTERVALS) / (NUM_INTERVALS) * 0.8
 \end{lstlisting}
 \end{snugshade*}}
-
+This vector of times will be used for both the speciation and extinction rates.
+Also, remember that the times of the intervals represent ages going backwards in time.
 
 \subsubsection{Incomplete Taxon Sampling}
 
@@ -233,10 +245,13 @@ Now we have all of the parameters we need to specify the full episodic birth-dea
 We initialize the stochastic node representing the time tree.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-timetree ~ dnEpisodicBirthDeath(rootAge=T.rootAge(), lambdaRates=speciation, lambdaTimes=interval_times, muRates=extinction, muTimes=interval_times, rho=rho, taxa=taxa)
+timetree ~ dnEpisodicBirthDeath(rootAge=T.rootAge(), lambdaRates=speciation, lambdaTimes=interval_times, muRates=extinction, muTimes=interval_times, rho=rho, samplingStrategy="uniform", condition="survival", taxa=taxa)
 \end{lstlisting}
 \end{snugshade*}}
-And then we attach data to it.
+You may notice that we explicitly specify that we want to condition on survival.
+It is possible to change this condition to the \emph{time of the process} or \emph{the number of sampled taxa} too.
+
+Then we attach data to the \cl{timetree} variable.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 timetree.clamp(T)
@@ -317,9 +332,8 @@ Just start \R in the main directory for this analysis and then type the followin
 library(RevGadgets)
 
 tree <- read.tree("data/primates_Springer.tre")
-files <- c("output/primates_EBD_speciation_times.log", "output/primates_EBD_speciation_rates.log", "output/primates_EBD_extinction_times.log", "output/primates_EBD_extinction_rates.log")
 
-rev_out <- rev.process.output(files,tree,burnin=0.25,numIntervals=100)
+rev_out <- rev.process.div.rates(speciation_times_file = "output/primates_EBD_speciation_times.log", speciation_rates_file = "output/primates_EBD_speciation_rates.log", extinction_times_file = "output/primates_EBD_extinction_times.log", extinction_rates_file = "output/primates_EBD_extinction_rates.log", tree, burnin=0.25,numIntervals=100)
 
 pdf("EBD.pdf")
 par(mfrow=c(2,2))
